force-app/main/default/objects/KimbleOne__PlanActivityAssignment__c/KimbleOne__PlanActivityAssignment__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Plan Activity Assignment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>PlanActivityAssignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Activity Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>