force-app/main/default/objects/KimbleOne__PlanActivityAssignment__c/fields/KimbleOne__ExpendedCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpendedCost__c</fullName>
    <label>Expended Cost</label>
    <summarizedField>KimbleOne__PlanTaskAssignment__c.KimbleOne__ExpendedCost__c</summarizedField>
    <summaryForeignKey>KimbleOne__PlanTaskAssignment__c.KimbleOne__PlanActivityAssignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>