force-app/main/default/objects/KimbleOne__PlanActivityAssignment__c/fields/KimbleOne__ExpendedEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpendedEffort__c</fullName>
    <label>Expended Effort</label>
    <summarizedField>KimbleOne__PlanTaskAssignment__c.KimbleOne__ExpendedEffort__c</summarizedField>
    <summaryForeignKey>KimbleOne__PlanTaskAssignment__c.KimbleOne__PlanActivityAssignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>