force-app/main/default/objects/KimbleOne__PlanActivityAssignment__c/fields/KimbleOne__ForecastRemainingEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastRemainingEffort__c</fullName>
    <formula>KimbleOne__RemainingEffort__c / CASE(KimbleOne__ActivityAssignment__r.KimbleOne__ResourcedActivityOperatedWith__r.KimbleOne__UsageUnitType__r.KimbleOne__Enum__c,
KimbleOne__ActivityAssignment__r.KimbleOne__ResourcedActivityOperatedWith__r.KimbleOne__ForecastUnitType__r.KimbleOne__Enum__c, 1,
&apos;Hour&apos;, KimbleOne__ActivityAssignment__r.KimbleOne__HoursPerDay__c,
1/KimbleOne__ActivityAssignment__r.KimbleOne__HoursPerDay__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Remaining Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>