force-app/main/default/objects/KimbleOne__PlanActivityAssignment__c/fields/KimbleOne__ForecastRemainingEffortToUsageFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastRemainingEffortToUsageFactor__c</fullName>
    <formula>if ( KimbleOne__ActivityAssignment__r.KimbleOne__ForecastRemainingUsage__c &gt; 0, KimbleOne__ForecastRemainingEffort__c / KimbleOne__ActivityAssignment__r.KimbleOne__ForecastRemainingUsage__c, 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ForecastRemaining Effort To Usage Factor</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>