force-app/main/default/objects/KimbleOne__PlanActivityAssignment__c/fields/KimbleOne__RemainingCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemainingCost__c</fullName>
    <label>RemainingCost</label>
    <summarizedField>KimbleOne__PlanTaskAssignment__c.KimbleOne__RemainingCost__c</summarizedField>
    <summaryForeignKey>KimbleOne__PlanTaskAssignment__c.KimbleOne__PlanActivityAssignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>