force-app/main/default/objects/KimbleOne__PlanActivityAssignment__c/fields/KimbleOne__TrackingPlan__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TrackingPlan__c</fullName>
    <label>Tracking Plan</label>
    <referenceTo>KimbleOne__TrackingPlan__c</referenceTo>
    <relationshipLabel>Plan Activity Assignments</relationshipLabel>
    <relationshipName>Plan_Activity_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>